--- a/HallPass/www/templates/main.html
+++ b/HallPass/www/templates/main.html
@@ -1,20 +1,20 @@
 ﻿<!--This is the abstract view for the tabbed app in logged-in status -->
 <ion-view>
-    <ion-tabs class="tabs-icon-top tabs-balanced">
+    <ion-tabs class="tabs-icon-top tabs-positive">
 
-        <ion-tab title="Forum" icon="ion-android-chat" href="#/main/forum">
+        <ion-tab title="Forum" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/main/forum">
             <ion-nav-view name="forum-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Notes" icon="ion-edit" href="#/main/notes">
+        <ion-tab title="Notes"  icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/main/notes">
             <ion-nav-view name="notes-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Map" icon="ion-map" href="#/main/map">
+        <ion-tab title="Map"  icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/main/map">
             <ion-nav-view name="map-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Settings" icon="ion-gear-a" href="#/main/settings">
+        <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/main/settings">
             <ion-nav-view name="settings-tab"></ion-nav-view>
         </ion-tab>
 
