--- a/HallPass/www/templates/settings.html
+++ b/HallPass/www/templates/settings.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="Settings" name="dashboard-view">
 
-    <ion-nav-buttons side="right">
-        <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
+    <ion-nav-buttons side="left">
+        <button class="button icon-left ion-log-out button-stable" ng-click="logOut()">Logout</button>
     </ion-nav-buttons>
 
     <ion-content class="padding">
