--- a/HallPass/platforms/android/assets/www/templates/addPost.html
+++ b/HallPass/platforms/android/assets/www/templates/addPost.html
@@ -1,4 +1,5 @@
-﻿<input type="text" placeholder="Enter your room name...">
+﻿<input type="text" placeholder="Enter your class" name="classname">
+<input type="text" placeholer="Enter location" name="location">
 
 
 <!-- ng-model="vm.room.name" 
