--- a/HallPass/platforms/ios/www/templates/map.html
+++ b/HallPass/platforms/ios/www/templates/map.html
@@ -1,4 +1,4 @@
-﻿<ion-view view-title="Map" name="dashboard-view">
+﻿<ion-view view-title="Map" name="dashboard-view" on-create="mapCreated(map">
 
     <ion-nav-buttons side="left">
         <button class="button icon-left ion-log-out button-stable" ng-click="logOut()">Logout</button>
@@ -9,18 +9,17 @@
         <div id="map" data-tap-disabled="true"></div> -->
    
 
-    <ion-pane>
+
         <ion-header-bar class="bar-stable">
             <h1 class="title">Map example</h1>
         </ion-header-bar>
         <ion-content ng-controller="MapController">
             <div id="map" data-tap-disabled="true"></div>
+
         </ion-content>
-    </ion-pane>
+
     
-    </ion-content>
-            <script src="js/controllers.js"></script>
-            <script src="js/map.js"></script>
-             <script src="https://maps-api-ssl.google.com/maps/api/js?libraries=places"></script>
+    <script src="js/controllers.js"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAdWuNLJKXIO9NF41qYCRXHazCK-dU_yoM&sensor=true"></script>
 
 </ion-view>
