--- a/HallPass/platforms/ios/www/templates/map.html
+++ b/HallPass/platforms/ios/www/templates/map.html
@@ -13,13 +13,23 @@
         <ion-header-bar class="bar-stable">
             <h1 class="title">Map example</h1>
         </ion-header-bar>
-        <ion-content ng-controller="MapController">
+<!--         <ion-content ng-controller="MapController">
             <div id="map" data-tap-disabled="true"></div>
+             <map on-create="mapCreated(map)"></map>
 
-        </ion-content>
+        </ion-content> -->
 
+        <ion-content ng-controller="MapController">
+      <div id="map" data-tap-disabled="true"></div>
+    </ion-content>
+    <ion-footer-bar class="bar-white">
+      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Locate Me!</a>
+    </ion-footer-bar>
+
+    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
+    <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
     
     <script src="js/controllers.js"></script>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAdWuNLJKXIO9NF41qYCRXHazCK-dU_yoM&sensor=true"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAdWuNLJKXIO9NF41qYCRXHazCK-dU_yoM"></script>
 
 </ion-view>
