--- a/HallPass/platforms/ios/www/templates/main.html
+++ b/HallPass/platforms/ios/www/templates/main.html
@@ -10,7 +10,7 @@
             <ion-nav-view name="notes-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Map"  icon-off="ion-ios-map-outline" icon-on="ion-ios-map" href="#/main/map">
+        <ion-tab title="Map"  icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/main/map">
             <ion-nav-view name="map-tab"></ion-nav-view>
         </ion-tab>
 
