--- a/HallPass/platforms/android/assets/www/templates/login.html
+++ b/HallPass/platforms/android/assets/www/templates/login.html
@@ -5,10 +5,10 @@
           </ion-nav-title>
   </ion-nav-bar>
         <ion-content class="padding">
-            
-          <div class="list text-center padding">
-            <i class="icon ion-university larger positive"></i>
-          </div>
+            <div class="item images-parent">
+                <img src="../img/booklet.png" class="center-image" style="border-radius: 50%">
+            </div>
+          
 
           <form novalidate name="loginForm" ng-submit="loginForm.$valid && signIn(user)">
           <div class="list">
