--- a/HallPass/platforms/android/assets/www/templates/register.html
+++ b/HallPass/platforms/android/assets/www/templates/register.html
@@ -4,9 +4,11 @@
         </ion-nav-back-button>
     </ion-nav-bar>
     <ion-content class="padding-top">
-        <div class="text-center padding-top">
-            <i class="icon ion-android-person-add larger positive"></i>
+      
+        <div class="item images-parent">
+            <img src="../img/clipboard.png" class="center-image" style="border-radius: 50%">
         </div>
+        
         <form name="registerForm" novalidate ng-submit="registerForm.$valid && register(user)"
               ng-class="{ 'has-error' : registerForm.txtemail.$invalid && registerForm.$submitted }">
             <div class="list">
@@ -16,11 +18,11 @@
                            ng-minlength="6"
                            ng-maxlength="30"
                            required>
-                </label>
-                <div class="form-errors" ng-messages="registerForm.txtemail.$error" ng-if="registerForm.$submitted">
+                </label>                
+                <div class="form-errors" ng-messages="registerForm.txtusername.$error" ng-if="registerForm.$submitted">
                     <div class="form-error" ng-message="required">This field is required.</div>
-                    <div class="form-error" ng-message="email">This field is must be an email.</div>
-                    <div class="form-error" ng-message="maxlength">This field is must be less than 30 characters.<</div>
+                    <div class="form-error" ng-message="minlength">This field is must be less than 3 characters.<</div>
+                    <div class="form-error" ng-message="maxlength">This field is must be less than 10 characters.<</div>
                 </div>
                 <label class="item item-input item-floating-label" ng-class="{ 'has-error-lr' : registerForm.txtpassword.$invalid  && registerForm.$submitted}">
                     <span class="input-label">Password</span>
