--- a/HallPass/platforms/android/assets/www/templates/login.html
+++ b/HallPass/platforms/android/assets/www/templates/login.html
@@ -6,7 +6,7 @@
   </ion-nav-bar>
         <ion-content class="padding">
             <div class="item images-parent">
-                <img src="../img/booklet.png" class="center-image" style="border-radius: 50%">
+                <img src="img/booklet.png" class="center-image" style="border-radius: 50%">
             </div>
           
 
