--- a/HallPass/platforms/android/assets/www/templates/register.html
+++ b/HallPass/platforms/android/assets/www/templates/register.html
@@ -6,7 +6,7 @@
     <ion-content class="padding-top">
       
         <div class="item images-parent">
-            <img src="../img/clipboard.png" class="center-image" style="border-radius: 50%">
+            <img src="img/clipboard.png" class="center-image" style="border-radius: 50%">
         </div>
         
         <form name="registerForm" novalidate ng-submit="registerForm.$valid && register(user)"
