--- a/HallPass/www/templates/settings.html
+++ b/HallPass/www/templates/settings.html
@@ -7,7 +7,7 @@
     <ion-content class="padding">
         <div class="list">
             <div class="item images-parent">
-                <img src="../img/ben.png" class="center-image" style="border-radius: 50%">
+                <img src="img/ben.png" class="center-image" style="border-radius: 50%">
                 <div class="row">
                     <div class="col text-right">
                         <button class="button">
